Adds basic category management :)

--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -11,6 +11,7 @@ size = large
 [fields.author]
 label = Author
 type = string
+default = Fátima Caballero
 width = 1/2
 
 [fields.twitter_handle]
@@ -27,3 +28,9 @@ width = 1/4
 [fields.body]
 label = Body
 type = markdown
+
+[fields.categories]
+label = Categories
+type = checkboxes
+source = site.query('/categories')
+width = 1/8
