--- a/models/blog.ini
+++ b/models/blog.ini
@@ -1,6 +1,6 @@
 [model]
 name = Blog
-label = Blog
+label = {{ this.title }}
 hidden = yes
 
 [children]
@@ -10,3 +10,8 @@ order_by = -pub_date, title
 [pagination]
 enabled = yes
 per_page = 10
+
+[fields.title]
+label = Title
+type = string
+default = Blog
